ブラウズのタブに適切なタイトルが表示されることを確認するspecを記述

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title
-      | RailsTutorial
+      = @title
+      |  | Ruby on Rails Tutorial Sample App
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
