full_titleメソッドをApplicationヘルパーに追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,8 +2,7 @@ doctype html
 html
   head
     title
-      = @title
-      |  | Ruby on Rails Tutorial Sample App
+      = full_title(@page_title)
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
