--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -5,6 +5,6 @@
     = link_to "Ruby on Rails Tutorial", "https://railstutorial.jp/"
     |  sample application.
 
-  = link_to "Sign up now!", "#", class: "btn btn-lg btn-primary"
+  = link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary"
 
 = link_to image_tag("rails-logo.svg", alt: "Rails logo", width: "200px"), "https://rubyonrails.org/"
