--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,3 +1,15 @@
 - @page_title = "Sign up"
 h1 Sign up
-p This will be a signup page for new users.
+
+.row 
+  .col-md-6.col-md-offset-3 
+    = form_with model: @user, local: true do |f|
+      = f.label :name
+      = f.text_field :name
+      = f.label :email
+      = f.email_field :email
+      = f.label :password
+      = f.password_field :password
+      = f.label :password_confirmation
+      = f.password_field :password_confirmation
+      = f.submit
