--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,8 @@ html
   body
     = render "layouts/header"
     .container
+      - flash.each do |msg|
+        = msg
       = yield
       = render "layouts/footer"
       = debug(params) if Rails.env.development?
